# likwid_marker

./: CMakeLists.txt  README.md  likwid_marker.cpp  likwid_marker_omp.cpp
